          column in the GROUP BY clause
        - Properly support column names with symbols (e.g. single quote)
          via custom accessors
        - Fixed ::Schema::Versioned to work properly with quoting on
          (RT#59619)
        - Fixed t/54taint fails under local-lib
        - Fixed SELECT ... FOR UPDATE with LIMIT regression (RT#58554)

    * Misc
        - Refactored capability handling in Storage::DBI, allows for
          standardized capability handling wrt query/enable/disable
        - Makefile.PL no longer imports GetOptions() to interoperate
          better with Catalyst installers
        - Bumped minimum Module::Install for developers
        - Bumped DBD::SQLite dependency and removed some TODO markers
          from tests (RT#59565)
        - Do not execute t/zzzzzzz_sqlite_deadlock.t for regular module
          installs - test is prone to spontaneous blow up
        - DT-related tests now require a DateTime >= 0.55 (RT#60324)

0.08123 2010-06-12 14:46 (UTC)
    * Fixes
        - Make sure Oracle identifier shortener applies to auto-generated
          column names, so we stay within the 30-char limit (RT#58271)
        - Oracle sequence detection now works across schemas
        - Fix a Storage/$dbh leak introduced by the migration to
          Try::Tiny (this is *not* a Try::Tiny bug)
        - Fix corner case of count with group-by over a 1:1 join column
          where the selector ends up with column name clashes
        - POD fixes (RT#58247)

    * Misc
        - Test suite default on-disk database now checks for Win32
          fail-conditions even when running on other OSes

0.08122 2010-06-03 17:41 (UTC)
    * New Features
        - Add DBIx::Class::FilterColumn for non-ref filtering
        - ::Storage::DBI now correctly preserves a parent $dbh from
          terminating children, even during interpreter-global
          out-of-order destruction
        - dbicadmin supports an -I option with the same semantics as