@@ -26,6 +26,8 @@ Revision history for DBIx::Class
           (RT#59619)
         - Fixed t/54taint fails under local-lib
         - Fixed SELECT ... FOR UPDATE with LIMIT regression (RT#58554)
+        - Fixed CDBICompat to preserve order of column-group additions,
+          so that test relying on the order of %{} will no longer fail
 
     * Misc
         - Refactored capability handling in Storage::DBI, allows for
